@@ -1,0 +1,268 @@
+# File: exdb-config-example.yml (site dependent portion)
+# Date: 3-Feb-2020 jdw
+#
+# Updated:
+#   15-Feb-2020 - Now referencing py-rcsb_exdb_assets in development branch.
+#   16-Feb-2020 - Move dictionary locators and type and coverage config to site config sections.
+#   20-Feb-2020 - IMPORTANT NOTE -- Schema locators in this file now point at a development branch.
+#   30-Apr-2020 - Add RCSB_EDMAP_LIST_PATH option as path to edmaps.json
+#   18-May-2020 - Added DRUGBANK_MOCK_URL_TARGET to point to mangable raw DB dataset.
+#   28-Jul-2020 - Add stash server options
+#   29-Oct-2020 - add REFERENCE_SEQUENCE_ALIGNMENTS: PDB to site_info_configuration
+#   11-Dec-2020 - add alternate pw for mysql
+#   19-Jul-2021 - add git stash configuration
+#   24-Jul-2021 - adjust stash mock configuration
+---
+DEFAULT: {}
+##
+site_info_configuration:
+  # Site specific path and server configuration options - (REFERENCING DEVELOPMENT RESOURCES)
+  #
+  CONFIG_SUPPORT_TOKEN: CONFIG_SUPPORT_TOKEN_ENV
+  #
+  # Database server connection details
+  #
+  MONGO_DB_HOST: localhost
+  MONGO_DB_PORT: "27017"
+  _MONGO_DB_USER_NAME: ""
+  _MONGO_DB_PASSWORD: ""
+  MYSQL_DB_HOST_NAME: localhost
+  MYSQL_DB_PORT_NUMBER: "3306"
+  _MYSQL_DB_USER_NAME: wrIzBGtCsQmkjc7tbEPQ3oEaOnpvivXaKcQsvXD6kn4KHMvA7LCL4O9GlAI=
+  _MYSQL_DB_PASSWORD: qXPp32Z6DhNVMwo9fQIK5+KB13c1Jd43E3Bn6LmJcSyXc0NAt4H/hwo/xglYpmELV5Vqaw==
+  _MYSQL_DB_PASSWORD_ALT: s6mNxq3FIwZLrLiIeHpDZQcuVxfQqrR3gA+dEMOGgHwsjrJV5da08H74RmnNRus74Q==
+  MYSQL_DB_DATABASE_NAME: mysql
+  CRATE_DB_HOST: localhost
+  CRATE_DB_PORT: "4200"
+  COCKROACH_DB_HOST: localhost
+  COCKROACH_DB_PORT: "26257"
+  COCKROACH_DB_NAME: system
+  _COCKROACH_DB_USER_NAME: HR2ez8iLbEpvN+hXKIQS3qa6/QpiFRpf/WvrfHiwfjcL09E+iWTQJhsxTsw=
+  #
+  # Primary repository data and related computed repository data paths
+  #
+  BIRD_REPO_PATH: MOCK_BIRD_REPO
+  BIRD_FAMILY_REPO_PATH: MOCK_BIRD_FAMILY_REPO
+  BIRD_CHEM_COMP_REPO_PATH: MOCK_BIRD_CC_REPO
+  CHEM_COMP_REPO_PATH: MOCK_CHEM_COMP_REPO
+  PDBX_REPO_PATH: MOCK_PDBX_SANDBOX
+  RCSB_EXCHANGE_SANDBOX_PATH: MOCK_EXCHANGE_SANDBOX
+  IHM_DEV_REPO_PATH: MOCK_IHM_REPO
+  VRPT_REPO_PATH: MOCK_VALIDATION_REPORTS
+  VRPT_REPO_PATH_ENV: VRPT_REPO_PATH_ALT
+  #
+  RCSB_EDMAP_LIST_PATH: MOCK_EXCHANGE_SANDBOX/status/edmaps.json
+  #
+  RCSB_SEQUENCE_CLUSTER_DATA_PATH: cluster_data/mmseqs_clusters_current
+  SIFTS_SUMMARY_DATA_PATH: sifts-summary
+  # -------------------------------------------------------------------------------------------
+  #   -- Below are common across current deployments -
+  #
+  # Supporting and integrated resource data cache directory names
+  #
+  #DRUGBANK_CACHE_DIR: DrugBank
+  _DRUGBANK_AUTH_USERNAME: 0qrpNd4OhGuVsJqEpcsAVEovZ0hl6QkgxmbTy3bPssd06Z9tuM6bJqgsWwmFCd0JnjIMIEWyKPMmF1pI5g==
+  _DRUGBANK_AUTH_PASSWORD: lA/K132i8DOtLdMHfm3gpNqprZ6ABKjsCRxfcXIMnxpKQzBv/B6dmC7x1vRO86JhqdT0b84=
+  DRUGBANK_MOCK_URL_TARGET: DrugBank/full_database.zip
+  #
+  #ATC_CACHE_DIR: atc
+  #CHEM_COMP_CACHE_DIR: chem_comp
+  NCBI_TAXONOMY_CACHE_DIR: NCBI
+  ENZYME_CLASSIFICATION_CACHE_DIR: ec
+  STRUCT_DOMAIN_CLASSIFICATION_CACHE_DIR: domains_struct
+  SIFTS_SUMMARY_CACHE_DIR: sifts_summary
+  DICTIONARY_CACHE_DIR: dictionaries
+  DATA_TYPE_INFO_CACHE_DIR: data_type_and_coverage
+  REPO_UTIL_CACHE_DIR: repo_util
+  EXDB_CACHE_DIR: exdb
+  CITATION_REFERENCE_CACHE_DIR: cit_ref
+  #
+  #
+  PROVENANCE_INFO_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/provenance/rcsb_extend_provenance_info.json
+  PROVENANCE_INFO_CACHE_DIR: provenance
+  #
+  SCHEMA_DEFINITION_LOCATOR_PATH: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/schema_definitions
+  SCHEMA_DEFINITION_CACHE_DIR: schema_definitions
+  JSON_SCHEMA_DEFINITION_LOCATOR_PATH: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/json_schema_definitions
+  JSON_SCHEMA_DEFINITION_CACHE_DIR: json_schema_definitions
+  #
+  # Helper class binding and mappings
+  #
+  DICT_METHOD_HELPER_MODULE_PATH_MAP:
+    rcsb.utils.dictionary.DictMethodEntryHelper: rcsb.utils.dictionary.DictMethodEntryHelper
+    rcsb.utils.dictionary.DictMethodChemRefHelper: rcsb.utils.dictionary.DictMethodChemRefHelper
+    rcsb.utils.dictionary.DictMethodEntityHelper: rcsb.utils.dictionary.DictMethodEntityHelper
+    rcsb.utils.dictionary.DictMethodAssemblyHelper: rcsb.utils.dictionary.DictMethodAssemblyHelper
+    rcsb.utils.dictionary.DictMethodEntityInstanceHelper: rcsb.utils.dictionary.DictMethodEntityInstanceHelper
+  # ------ ------ ------ ------ ------ ------ ------ -------
+  # ADDED rcsb.db V0.966 Source dictionary locators -
+  #
+  PDBX_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionaries/mmcif_pdbx_v5_next.dic
+  RCSB_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionaries/rcsb_mmcif_ext_v1.dic
+  IHMDEV_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionaries/ihm-extension.dic
+  FLR_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionaries/flr-extension.dic
+  VRPT_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionaries/vrpt_mmcif_ext.dic
+  VRPT_DICT_MAPPING_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionaries/vrpt_dictmap.json
+  # ------ ------ ------ ------ ------ ------ ------ ------ ------
+  # Added in rcsb.db V0.966 - Data type details and type mapping
+  APP_DATA_TYPE_INFO_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/data_type_and_coverage/app_data_type_mapping.cif
+  INSTANCE_DATA_TYPE_INFO_LOCATOR_PATH: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/data_type_and_coverage
+  #
+  CONTENT_DEF_HELPER_MODULE: rcsb.db.helpers.ContentDefinitionHelper
+  DOCUMENT_DEF_HELPER_MODULE: rcsb.db.helpers.DocumentDefinitionHelper
+  CONFIG_APPEND_LOCATOR_PATHS:
+    - https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/config/exdb-config-schema.yml
+  # ------ ------ ------ ------ ------ ------ ------ ------ ------
+  #
+  # Mock stash configuration to support remote testing in local mode (no stash server urls)
+  #
+  STASH_MODE: local
+  STASH_LOCAL_BASE_PATH: stash-storage
+  _STASH_SERVER_BASE_PATH: KBrait4Y1emyzYNohVRpr3cTbX9ndqnVHb3+yq2Qh/gTuWKZB5Yhx1m7ILizrh64qyKXKRXAHQg1eearDgugYA==
+  # STASH_SERVER_URL:
+  # STASH_SERVER_FALLBACK_URL:
+  #
+  # Stash Git configuration to development branch -
+  _STASH_GIT_ACCESS_TOKEN: rRMGO5TdNUJN7sFaUpb2vzvvY4JB8brYV3Z6d/FOUeG1KT3qlkwIBQiTcs/NxM83kVvmcbT7yPvGaIqRiMqz6NfWjZmuo8M1H49JN3qr/n4=
+  _STASH_GIT_SERVER_HOST: +Z7i537J9Kn04akYHfq0voqz/qgQYAVJGgskkLCZGKsuvm//gMZ8M8QugEi5tY8vhek=
+  _STASH_GIT_RAW_SERVER_HOST: T0KhaquEzqDT3BWlG4WJbdi0EUsn11eS9fSIL+VbVG8mIQxmgCLRR+yjiZ+fJraeXC3FgGQBND73/dnEpcV/bL8=
+  STASH_GIT_REPOSITORY_PATH: rcsb/py-rcsb_exdb_assets_stash.git
+  STASH_GIT_REPOSITORY_BRANCH: development
+  STASH_GIT_REPOSITORY_MAX_SIZE_MB: 50
+  #
+  REFERENCE_SEQUENCE_ALIGNMENTS: PDB
+##
+site_info_remote_configuration:
+  # Site specific path and server configuration options - (REFERENCING DEVELOPMENT RESOURCES)
+  #
+  CONFIG_SUPPORT_TOKEN: CONFIG_SUPPORT_TOKEN_ENV
+  #
+  # Database server connection details:
+  #     dev: 128.6.158.254
+  # staging: 128.6.159.43
+  #
+  MONGO_DB_HOST: 128.6.158.254
+  MONGO_DB_PORT: "27017"
+  _MONGO_DB_USER_NAME: vknsNHfQ1nyy5w1vsfP4fbOp1iPxD3K5yZmNFsJDqTRl+87zicTLa9lkHG5uReM=
+  _MONGO_DB_PASSWORD: wfm/FNyhON/AGaJfLhL5ZA0ObAVU0DZ0sICB2eemS8GFfAOZvo3Y/vXTkjLayViwppj2MQ==
+  #_MONGO_DB_USER_NAME: ""
+  #_MONGO_DB_PASSWORD: ""
+  MONGO_DB_ADMIN_DB_NAME: admin
+  #
+  #
+  #  Channel B
+  # MONGO_DB_HOST: 128.6.159.133
+  #  Channel A
+  # MONGO_DB_HOST: 128.6.159.137
+  # MONGO_DB_PORT: '27017'
+  #_MONGO_DB_USER_NAME: vknsNHfQ1nyy5w1vsfP4fbOp1iPxD3K5yZmNFsJDqTRl+87zicTLa9lkHG5uReM=
+  #_MONGO_DB_PASSWORD: wfm/FNyhON/AGaJfLhL5ZA0ObAVU0DZ0sICB2eemS8GFfAOZvo3Y/vXTkjLayViwppj2MQ==
+  #
+  #
+  MYSQL_DB_HOST_NAME: localhost
+  MYSQL_DB_PORT_NUMBER: "3306"
+  _MYSQL_DB_USER_NAME: wrIzBGtCsQmkjc7tbEPQ3oEaOnpvivXaKcQsvXD6kn4KHMvA7LCL4O9GlAI=
+  _MYSQL_DB_PASSWORD: qXPp32Z6DhNVMwo9fQIK5+KB13c1Jd43E3Bn6LmJcSyXc0NAt4H/hwo/xglYpmELV5Vqaw==
+  _MYSQL_DB_PASSWORD_ALT: s6mNxq3FIwZLrLiIeHpDZQcuVxfQqrR3gA+dEMOGgHwsjrJV5da08H74RmnNRus74Q==
+  MYSQL_DB_DATABASE_NAME: mysql
+  #
+  CRATE_DB_HOST: localhost
+  CRATE_DB_PORT: "4200"
+  COCKROACH_DB_HOST: localhost
+  COCKROACH_DB_PORT: "26257"
+  COCKROACH_DB_NAME: system
+  _COCKROACH_DB_USER_NAME: HR2ez8iLbEpvN+hXKIQS3qa6/QpiFRpf/WvrfHiwfjcL09E+iWTQJhsxTsw=
+  #
+  # Primary repository data and related computed repository data paths
+  #
+  BIRD_REPO_PATH: /net/data/components/prd-v3
+  BIRD_FAMILY_REPO_PATH: /net/data/components/family-v3
+  BIRD_CHEM_COMP_REPO_PATH: /data/components/prdcc-v3
+  CHEM_COMP_REPO_PATH: /net/data/components/ligand-dict-v3
+  # PDBX_REPO_PATH: /net/beta_data/mmcif-pdbx-load-v5.0
+  PDBX_REPO_PATH: /net/ftp_tree_v5/ftp-v5.0/pdb/data/structures/divided/mmCIF
+  RCSB_EXCHANGE_SANDBOX_PATH: /net/sandbox_v5/ftp-v5.0-support
+  IHM_DEV_REPO_PATH: ../py-rcsb_db/rcsb/mock-data/MOCK_IHM_REPOMOCK_IHM_REPO
+  VRPT_REPO_PATH: /net/ftp_tree_v5/ftp-v5.0/pdb/validation_reports
+  VRPT_REPO_PATH_ENV: VRPT_REPO_PATH_ALT
+  #
+  RCSB_EDMAP_LIST_PATH: /net/sandbox_v5/ftp-v5.0-support/status/edmaps.json
+  #
+  RCSB_SEQUENCE_CLUSTER_DATA_PATH: /net/users/update/Data/sequence-clusters/current-mmseqs
+  SIFTS_SUMMARY_DATA_PATH: /net/data-remote/ebi/sifts/flatfiles/csv
+  # -------------------------------------------------------------------------------------------
+  #   -- Options below in this section are common across current deployments -
+  #
+  # Supporting and integrated resource data cache directory names
+  #
+  #DRUGBANK_CACHE_DIR: DrugBank
+  _DRUGBANK_AUTH_USERNAME: 0qrpNd4OhGuVsJqEpcsAVEovZ0hl6QkgxmbTy3bPssd06Z9tuM6bJqgsWwmFCd0JnjIMIEWyKPMmF1pI5g==
+  _DRUGBANK_AUTH_PASSWORD: lA/K132i8DOtLdMHfm3gpNqprZ6ABKjsCRxfcXIMnxpKQzBv/B6dmC7x1vRO86JhqdT0b84=
+  #
+  #ATC_CACHE_DIR: atc
+  #CHEM_COMP_CACHE_DIR: chem_comp
+  NCBI_TAXONOMY_CACHE_DIR: NCBI
+  ENZYME_CLASSIFICATION_CACHE_DIR: ec
+  STRUCT_DOMAIN_CLASSIFICATION_CACHE_DIR: domains_struct
+  SIFTS_SUMMARY_CACHE_DIR: sifts_summary
+  DICTIONARY_CACHE_DIR: dictionaries
+  DATA_TYPE_INFO_CACHE_DIR: data_type_and_coverage
+  REPO_UTIL_CACHE_DIR: repo_util
+  EXDB_CACHE_DIR: exdb
+  CITATION_REFERENCE_CACHE_DIR: cit_ref
+  #
+  PROVENANCE_INFO_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/provenance/rcsb_extend_provenance_info.json
+  PROVENANCE_INFO_CACHE_DIR: provenance
+  #
+  SCHEMA_DEFINITION_LOCATOR_PATH: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/schema_definitions
+  SCHEMA_DEFINITION_CACHE_DIR: schema_definitions
+  JSON_SCHEMA_DEFINITION_LOCATOR_PATH: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/json_schema_definitions
+  JSON_SCHEMA_DEFINITION_CACHE_DIR: json_schema_definitions
+  #
+  # Helper class binding and mappings
+  #
+  DICT_METHOD_HELPER_MODULE_PATH_MAP:
+    rcsb.utils.dictionary.DictMethodEntryHelper: rcsb.utils.dictionary.DictMethodEntryHelper
+    rcsb.utils.dictionary.DictMethodChemRefHelper: rcsb.utils.dictionary.DictMethodChemRefHelper
+    rcsb.utils.dictionary.DictMethodEntityHelper: rcsb.utils.dictionary.DictMethodEntityHelper
+    rcsb.utils.dictionary.DictMethodAssemblyHelper: rcsb.utils.dictionary.DictMethodAssemblyHelper
+    rcsb.utils.dictionary.DictMethodEntityInstanceHelper: rcsb.utils.dictionary.DictMethodEntityInstanceHelper
+  #
+  # ADDED rcsb.db V0.966 Source dictionary locators -
+  #
+  PDBX_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionaries/mmcif_pdbx_v5_next.dic
+  RCSB_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionaries/rcsb_mmcif_ext_v1.dic
+  IHMDEV_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionaries/ihm-extension.dic
+  FLR_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionaries/flr-extension.dic
+  VRPT_DICT_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionaries/vrpt_mmcif_ext.dic
+  VRPT_DICT_MAPPING_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/dictionaries/vrpt_dictmap.json
+  #
+  # Added in rcsb.db V0.966 - Data type details and type mapping
+  APP_DATA_TYPE_INFO_LOCATOR: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/data_type_and_coverage/app_data_type_mapping.cif
+  INSTANCE_DATA_TYPE_INFO_LOCATOR_PATH: https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/data_type_and_coverage
+  #
+  CONTENT_DEF_HELPER_MODULE: rcsb.db.helpers.ContentDefinitionHelper
+  DOCUMENT_DEF_HELPER_MODULE: rcsb.db.helpers.DocumentDefinitionHelper
+  CONFIG_APPEND_LOCATOR_PATHS:
+    - https://raw.githubusercontent.com/rcsb/py-rcsb_exdb_assets/development/config/exdb-config-schema.yml
+  #
+  # ------ ------ ------ ------ ------ ------ ------ ------ ------
+  #  Added V1.001 for stash storage server
+  # local|server
+  STASH_MODE: server
+  STASH_LOCAL_BASE_PATH: stash-storage
+  #
+  STASH_SERVER_URL: sftp://bl-east.rcsb.org
+  STASH_SERVER_FALLBACK_URL: sftp://bl-west.rcsb.org
+  _STASH_AUTH_USERNAME: 4Thjq6SFXelrqhyawXGkwNHQ2MJQRGjHpedv4mhpRlmIc7muS7YrlSQpS3Rao7EFskrZ
+  _STASH_AUTH_PASSWORD: FAQNnkUD6mjGTWeciRE7yQZu4/txndI6f4LBnGvmAbMT2/ndsmQ+xcUb7ShDnMhdurMbkH4i
+  _STASH_SERVER_BASE_PATH: 9Hdw+MvKcF+zwv4yr+n61fYuVey6nTu7JRMpFbDuSjqVDYQEh8NCS23GpJJJMDKVIw==
+  #
+  # Stash Git configuration to development branch -
+  _STASH_GIT_ACCESS_TOKEN: rRMGO5TdNUJN7sFaUpb2vzvvY4JB8brYV3Z6d/FOUeG1KT3qlkwIBQiTcs/NxM83kVvmcbT7yPvGaIqRiMqz6NfWjZmuo8M1H49JN3qr/n4=
+  _STASH_GIT_SERVER_HOST: +Z7i537J9Kn04akYHfq0voqz/qgQYAVJGgskkLCZGKsuvm//gMZ8M8QugEi5tY8vhek=
+  _STASH_GIT_RAW_SERVER_HOST: T0KhaquEzqDT3BWlG4WJbdi0EUsn11eS9fSIL+VbVG8mIQxmgCLRR+yjiZ+fJraeXC3FgGQBND73/dnEpcV/bL8=
+  STASH_GIT_REPOSITORY_PATH: rcsb/py-rcsb_exdb_assets_stash.git
+  STASH_GIT_REPOSITORY_BRANCH: development
+  STASH_GIT_REPOSITORY_MAX_SIZE_MB: 50
+  #
